added prepositions and examples to notebook

--- a/templates/_toolbar.html
+++ b/templates/_toolbar.html
@@ -6,6 +6,8 @@
             <option value="verbs">verbs</option>
             <option value="numbers">numbers</option>
             <option value="adverbs_adjectives">adverbs_adjectives</option>
+            <option value="prepositions">prepositions</option>
+            <option value="examples">examples</option>
         </select>
         <button onclick="loadTable()">🔄 Refresh</button>
         <button onclick="addRow()">➕ New Row</button>
