we now dont loose state when saving

--- a/templates/_toolbar.html
+++ b/templates/_toolbar.html
@@ -9,7 +9,7 @@
             <option value="prepositions">prepositions</option>
             <option value="examples">examples</option>
         </select>
-        <button onclick="loadTable()">🔄 Refresh</button>
+        <button onclick="loadTable(true)">🔄 Refresh</button>
         <button onclick="addRow()">➕ New Row</button>
         <button onclick="rerender()">🔁 Render Markdown</button>
     </div>
