--- a/templates/_footer_scripts.html
+++ b/templates/_footer_scripts.html
@@ -1,3 +1,4 @@
+<script src="{{ url_for('static', filename='theme_toggle.js') }}"></script>
 <script src="{{ url_for('static', filename='manage.js') }}"></script>
 </body>
 </html>
