--- a/templates/_toolbar.html
+++ b/templates/_toolbar.html
@@ -12,6 +12,8 @@
         <button onclick="loadTable(true)">🔄 Refresh</button>
         <button onclick="addRow()">➕ New Row</button>
         <button onclick="rerender()">🔁 Render Markdown</button>
+        <button id="darkToggle" onclick="toggleDarkMode()">🌙 Dark</button>
+
     </div>
 
     <div class="toolbar-right">
