added markdown reader

--- a/templates/html/manage-db/manage.html
+++ b/templates/html/manage-db/manage.html
@@ -1,3 +1,3 @@
-{% include "manage-db/_header.html" %}
-{% include "manage-db/_toolbar.html" %}
-{% include "manage-db/_footer_scripts.html" %}
+{% include "html/manage-db/_header.html" %}
+{% include "html/manage-db/_toolbar.html" %}
+{% include "html/manage-db/_footer_scripts.html" %}
